--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -359,7 +359,6 @@
         padding: 13px;
         margin-right: 8px;
         border-radius: 50%;
-        background-color: green;
     }
 
     .button-black {
@@ -683,6 +682,8 @@
         border-color: transparent;
     }
 }
+
+.ci-box input { padding-left: 3.5rem !important}
 
 .navbar-burger span:nth-child(2) {
     top: calc(50% - -1px);
