Desktop design and responsive

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -74,10 +74,6 @@ h5 {
   border-color: transparent;
 }
 
-.border-t {
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
-}
-
 label {
   font-weight: 600;
   font-size: 14px;
@@ -173,26 +169,15 @@ input {
   color: rgba(0, 0, 0, 0.8);
 }
 
-.navbar .navbar-start .navbar-item, .navbar .navbar-end .navbar-item {
-  color: rgba(0, 0, 0, 0.3);
-  display: block;
-  padding-right: 36px;
-}
-.navbar .navbar-start .active, .navbar .navbar-end .active {
+.m-btn {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 240px;
+  height: 56px;
   color: black;
-}
-.navbar .navbar-start .active::after, .navbar .navbar-end .active::after {
-  color: black;
-  content: "";
-  width: 20px;
-  height: 20px;
-  display: block;
-  border-bottom: 2px solid black;
+  background: transparent;
+  border-radius: 0;
 }
 
-footer {
-  padding: 32px 120px;
-}
 footer p {
   color: white;
   opacity: 0.7;
@@ -210,7 +195,201 @@ footer .text-gray {
   opacity: 0.7;
 }
 
+.mb-large {
+  margin-bottom: 5rem;
+}
+
+.padding-lrb {
+  padding: 0 3rem 1rem 3rem;
+}
+
+.nav-screen {
+  max-width: 87% !important;
+}
+
+.category-img-full {
+  width: 198px;
+  height: 144px;
+}
+
+.button-black {
+  color: white;
+  background-color: black;
+  border-radius: 0;
+  font-weight: 600;
+  border-color: transparent;
+  height: 56px;
+  width: 100%;
+  padding: 12px 82px;
+}
+
+.p-32 {
+  padding: 32px;
+}
+
+.category-num h2 {
+  font-size: 80px;
+  color: #000000;
+  opacity: 0.3;
+  line-height: 1;
+}
+.category-num label {
+  color: #000000;
+  opacity: 0.8;
+}
+
+@media (min-width: 1024px) {
+  .navbar .navbar-start .navbar-item, .navbar .navbar-end .navbar-item {
+    color: rgba(0, 0, 0, 0.3);
+    display: block;
+    padding-right: 36px;
+  }
+  .navbar .navbar-start .active, .navbar .navbar-end .active {
+    color: black;
+  }
+  .navbar .navbar-start .active::after, .navbar .navbar-end .active::after {
+    color: black;
+    content: "";
+    width: 20px;
+    height: 20px;
+    display: block;
+    border-bottom: 2px solid black;
+  }
+
+  .border-t-desktop {
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .border-l-desktop {
+    border-left: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .w-66 {
+    width: 66%;
+  }
+
+  .justify-content {
+    justify-content: space-between;
+    padding-right: 1.5rem;
+  }
+
+  .category-page label, .category-page p {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .category-page .category-page-img {
+    margin: 25px 0;
+  }
+
+  .category-num img {
+    padding-left: 1.5rem;
+  }
+}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .w-full {
+    width: 100%;
+  }
+}
+@media (max-width: 1023px) {
+  .google-icon {
+    margin-right: 1rem;
+    width: 6%;
+    height: 6%;
+  }
+
+  .category-num h2 {
+    line-height: 1.5;
+  }
+  .category-num img {
+    padding-left: 1rem;
+  }
+
+  .button-black {
+    padding: 12px;
+  }
+
+  .nav-screen {
+    max-width: none !important;
+  }
+
+  .columns.is-variable {
+    --columnGap: 0;
+  }
+
+  .column {
+    padding: 0;
+  }
+
+  .border-t {
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .navbar-brand {
+    padding: 0 24px;
+  }
+
+  .box-container {
+    padding: 24px 23px 24px 24px;
+  }
+  .box-container h2 {
+    font-weight: 500;
+  }
+
+  .mb-large {
+    margin-bottom: 0rem;
+  }
+
+  .pagination {
+    padding: 40px 0;
+    width: 100%;
+  }
+  .pagination .pagination-previous, .pagination .pagination-next, .pagination .pagination-link {
+    border-color: transparent;
+    color: rgba(0, 0, 0, 0.3);
+    min-width: 0;
+    font-size: 18px;
+    font-weight: 600;
+  }
+  .pagination .pagination-link.is-current {
+    background-color: transparent;
+    color: black;
+  }
+
+  .justify-content {
+    justify-content: flex-end;
+  }
+
+  .category-img-full {
+    height: 90px;
+    width: 90px;
+  }
+
+  footer {
+    padding: 24px 23px 50px 24px;
+  }
+  footer a {
+    padding-right: 7rem;
+  }
+  footer .f-margin {
+    margin-top: 1.5rem;
+  }
+}
 @media (max-width: 736px) {
+  .navbar .navbar-menu {
+    width: 100%;
+    height: 100vh;
+    box-shadow: none;
+    padding: 23px;
+  }
+  .navbar .navbar-menu a {
+    font-size: 32px;
+    color: black;
+    line-height: 1.7;
+  }
+  .navbar .navbar-menu .logout {
+    color: rgba(0, 0, 0, 0.3);
+  }
+
   .feed {
     color: white;
     background: rgba(0, 0, 0, 0.8);
@@ -499,16 +678,6 @@ footer .text-gray {
   #row_level_components .dashboard, #row_level_components .collections {
     padding: 24px 23px 24px 24px;
   }
-  #row_level_components .button-black {
-    padding: 12px;
-    height: 56px;
-    color: white;
-    background-color: black;
-    border-radius: 0;
-    font-weight: 600;
-    border-color: transparent;
-    width: 100%;
-  }
   #row_level_components .small-btn {
     padding: 12px 24px;
     width: 115px;
@@ -630,9 +799,6 @@ footer .text-gray {
     height: 112px;
     background-color: #f5f6f7;
   }
-  #row_level_components .w-full {
-    width: 100%;
-  }
   #row_level_components .tabs ul {
     border-bottom-color: transparent;
     border-bottom-style: none;
@@ -726,10 +892,6 @@ footer .text-gray {
     width: 80px;
     height: 80px;
   }
-  #row_level_components .category-img-full {
-    height: 152px;
-    width: 100%;
-  }
   #row_level_components #comment-modal .modal-card-head {
     display: block;
     background-color: white;
@@ -766,30 +928,6 @@ footer .text-gray {
   }
 }
 @media (max-width: 736px) {
-  .navbar-menu {
-    width: 100%;
-    height: 100vh;
-    box-shadow: none;
-    padding: 23px;
-  }
-  .navbar-menu a {
-    font-size: 32px;
-    color: black;
-    line-height: 1.7;
-  }
-  .navbar-menu .logout {
-    color: rgba(0, 0, 0, 0.3);
-  }
-}
-@media (max-width: 736px) {
-  .box-container {
-    padding: 24px 23px 24px 24px;
-  }
-  .box-container h2 {
-    font-weight: 500;
-  }
-}
-@media (max-width: 736px) {
   .num-posts {
     color: rgba(0, 0, 0, 0.3);
     font-size: 24px;
@@ -802,22 +940,6 @@ footer .text-gray {
   .category-page .category-page-img {
     width: 100%;
     height: 184px;
-  }
-}
-@media (max-width: 736px) {
-  .pagination {
-    padding: 40px 0;
-  }
-  .pagination .pagination-previous, .pagination .pagination-next, .pagination .pagination-link {
-    border-color: transparent;
-    color: rgba(0, 0, 0, 0.3);
-    min-width: 0;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  .pagination .pagination-link.is-current {
-    background-color: transparent;
-    color: black;
   }
 }
 @media (max-width: 736px) {
@@ -863,7 +985,6 @@ footer .text-gray {
 @media (max-width: 736px) {
   footer {
     background-color: black;
-    padding: 24px 23px 50px 24px;
   }
   footer h3 {
     color: white;
